git cache 삭제
gitignore 에 추가한 내용 반영하기 위해 cache 삭제